methods.slug.SlugTracking.scala.error
Erreur de compilation :
SlugTracking:9: error: type mismatch;
 found   : java.awt.Color
 required: String
  couleur = getCouleurSol()
                         ^SlugTracking:10: error: not found: value green
  if(couleur==green){
              ^