methods.slug.SlugTracking.scala.code
var couleur:String = ""

def isFacingTrail():Boolean = {
  if(estFaceMur()){
    return false
  }
  avance()
  couleur = getCouleurSol()
  if(couleur==green){
    recule()
    return true
  }
   else
    return false
    
  }